--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -8578,7 +8578,7 @@
       </notes>
       <segment>
         <source>Du hast {count} Aktionspunkt(e) benutzt.</source>
-        <target>{raw_count, plural, =0 {Vous avez utilisé {count} point d'action} one {Vous avez utilisé {count} point d'action} other {Vous avez utilisé {count} points d'action}}</target>
+        <target>{raw_count, plural,  one {Vous avez utilisé {count} point d'action} other {Vous avez utilisé {count} points d'action}}</target>
       </segment>
     </unit>
     <unit id="KYKuCCa">
@@ -17463,7 +17463,7 @@
       </notes>
       <segment>
         <source>Du hast dafür {count} Aktionspunkt(e) verbraucht.</source>
-        <target>{raw_count, plural, =0 {Vous avez utilisé {count} point d'action} one {Vous avez utilisé {count} point d'action} other {Vous avez utilisé {count} points d'action}}</target>
+        <target>{raw_count, plural, one {Vous avez utilisé {count} point d'action} other {Vous avez utilisé {count} points d'action}}</target>
       </segment>
     </unit>
     <unit id="tTMCru5">
@@ -22084,7 +22084,7 @@
       </notes>
       <segment>
         <source>{deads} Tot</source>
-        <target>{deads, plural, =0 {# mort} one {1 mort} other {# morts}}</target>
+        <target>{deads, plural, one {1 mort} other {# morts}}</target>
       </segment>
     </unit>
     <unit id="6ntsFNr">
@@ -22545,7 +22545,7 @@
       </notes>
       <segment>
         <source>{points} Punkt(e)</source>
-        <target>{points, plural, =0 {# point} one {1 point} other {# points}}</target>
+        <target>{points, plural, one {1 point} other {# points}}</target>
       </segment>
     </unit>
     <unit id="uAj26XB" name="Schließen">
