--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22504,8 +22504,8 @@
                     }
                 }
                 other {En plus de cette horde, <span>{num__copy}</span> anciens citoyens morts dans l'Outre-Monde sont revenus, les dents en avant et le regard morne...}
-            }]]>
-        </target>
+            }
+        ]]></target>
       </segment>
     </unit>
     <unit id="DLc6Njb">
@@ -22788,6 +22788,17 @@
       <segment>
         <source>Dieser Link bringt dich zum &lt;strong&gt;Großen Register&lt;/strong&gt;. Darin werden alle wichtigen Handlungen und Aktionen der Stadtbürger gespeichert...</source>
         <target><![CDATA[Ce lien permet d'accéder au <strong>Grand Registre</strong> qui consigne toutes les actions importantes effectuées par les Citoyens...]]></target>
+      </segment>
+    </unit>
+    <unit id="eOisfiB" name="Nichts Interessantes...">
+      <notes>
+        <note category="german">Nichts Interessantes...</note>
+        <note category="from">twig:///templates/ajax/game/inventory.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Nichts Interessantes...</source>
+        <target>Rien d'intéressant...</target>
       </segment>
     </unit>
   </file>
