--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -8167,7 +8167,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
     <unit id="sGKanc7" name="Abstimmen">
       <notes>
         <note category="german">Abstimmen</note>
-        <note category="from">[unused]</note>
+        <note category="from">db://ItemAction</note>
       </notes>
       <segment>
         <source>Abstimmen</source>
@@ -8177,7 +8177,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
     <unit id="Rrf3E_z" name="Vous avez voté pour {citizen} en tant que {role} !">
       <notes>
         <note category="german">Vous avez voté pour {citizen} en tant que {role} !</note>
-        <note category="from">[unused]</note>
+        <note category="from">db://ItemAction</note>
       </notes>
       <segment>
         <source>Vous avez voté pour {citizen} en tant que {role} !</source>
