--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -8149,7 +8149,7 @@
     <unit id="sGKanc7" name="Abstimmen">
       <notes>
         <note category="german">Abstimmen</note>
-        <note category="from">[unused]</note>
+        <note category="from">db://ItemAction</note>
       </notes>
       <segment>
         <source>Abstimmen</source>
@@ -8159,7 +8159,7 @@
     <unit id="Rrf3E_z" name="Vous avez voté pour {citizen} en tant que {role} !">
       <notes>
         <note category="german">Vous avez voté pour {citizen} en tant que {role} !</note>
-        <note category="from">[unused]</note>
+        <note category="from">db://ItemAction</note>
       </notes>
       <segment>
         <source>Vous avez voté pour {citizen} en tant que {role} !</source>
