--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22794,11 +22794,20 @@
       <notes>
         <note category="german">Nichts Interessantes...</note>
         <note category="from">twig:///templates/ajax/game/inventory.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Nichts Interessantes...</source>
         <target>Rien d'intéressant...</target>
+      </segment>
+    </unit>
+    <unit id="7ln_hQb" name="Zum Bau dieses Bauprojekts fehlen noch {ap} AP">
+      <notes>
+        <note category="german">Zum Bau dieses Bauprojekts fehlen noch {ap} AP</note>
+        <note category="from">twig:///templates/ajax/game/town/construction.html.twig</note>
+      </notes>
+      <segment>
+        <source>Zum Bau dieses Bauprojekts fehlen noch {ap} AP</source>
+        <target>La construction de ce chantier nécessite encore {ap} PA.</target>
       </segment>
     </unit>
   </file>
