--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -23035,11 +23035,20 @@
       <notes>
         <note category="german">Nichts Interessantes...</note>
         <note category="from">twig:///templates/ajax/game/inventory.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Nichts Interessantes...</source>
         <target>Nada interesante</target>
+      </segment>
+    </unit>
+    <unit id="7ln_hQb" name="Zum Bau dieses Bauprojekts fehlen noch {ap} AP">
+      <notes>
+        <note category="german">Zum Bau dieses Bauprojekts fehlen noch {ap} AP</note>
+        <note category="from">twig:///templates/ajax/game/town/construction.html.twig</note>
+      </notes>
+      <segment>
+        <source>Zum Bau dieses Bauprojekts fehlen noch {ap} AP</source>
+        <target>Esta construcción requiere aún {ap} PA.</target>
       </segment>
     </unit>
   </file>
