--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -3079,7 +3079,7 @@
       </notes>
       <segment>
         <source>Trockene Kräuter</source>
-        <target>Sachet d'herbe fraîche</target>
+        <target>Sac d'herbe fraîche</target>
       </segment>
     </unit>
     <unit id="SrwSSZ5" name="Mutterkorn">
