--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3090,7 +3090,7 @@
       </notes>
       <segment>
         <source>Du kannst kein Icon ohne einen Titel wählen.</source>
-        <target>Du kannst kein Icon ohne einen Titel wählen.</target>
+        <target>No puede elegir un icono sin título.</target>
       </segment>
     </unit>
     <unit id="wMIPplV" name="Statistiken">
@@ -3121,7 +3121,7 @@
       </notes>
       <segment>
         <source>Hat dir dein letztes Leben gefallen?</source>
-        <target>Hat dir dein letztes Leben gefallen?</target>
+        <target>¿Te gustó tu última vida?</target>
       </segment>
     </unit>
     <unit id=".XNMg8S">
@@ -3132,7 +3132,7 @@
       </notes>
       <segment>
         <source>MyHordes wird von einem unabhängigen Team von Programmierern in deren Freizeit entwickelt.</source>
-        <target>MyHordes wird von einem unabhängigen Team von Programmierern in deren Freizeit entwickelt.</target>
+        <target>MyHordes es desarrollado por un equipo independiente de programadores en su tiempo libre.</target>
       </segment>
     </unit>
     <unit id="JbPwhWn">
@@ -3143,7 +3143,7 @@
       </notes>
       <segment>
         <source>Wir sind ein Teil des EternalTwin-Projektes, welches es sich zur Aufgabe gemacht hat die Browserspiele von MotionTwin am Leben zu erhalten.</source>
-        <target>Wir sind ein Teil des EternalTwin-Projektes, welches es sich zur Aufgabe gemacht hat die Browserspiele von MotionTwin am Leben zu erhalten.</target>
+        <target>Somos parte del proyecto EternalTwin, que se ha propuesto la tarea de mantener vivos los juegos de navegador de MotionTwin.</target>
       </segment>
     </unit>
     <unit id="GLZ2E_L">
@@ -3154,7 +3154,7 @@
       </notes>
       <segment>
         <source>Das Spiel ist komplett kostenlos - es gibt keine Bezahlinhalte, wir zeigen keine Werbung an und führen auch kein Nutzer-Tracking durch.</source>
-        <target>Das Spiel ist komplett kostenlos - es gibt keine Bezahlinhalte, wir zeigen keine Werbung an und führen auch kein Nutzer-Tracking durch.</target>
+        <target>El juego es completamente gratuito: no hay contenido pago, no mostramos anuncios y no rastreamos a los usuarios.</target>
       </segment>
     </unit>
     <unit id="E6_xVpY">
@@ -3165,7 +3165,7 @@
       </notes>
       <segment>
         <source>Wenn dir MyHordes gefällt und du uns unterstützen möchtest, kannst du dies mit einer Spende an das EternalTwin Projekt tun.</source>
-        <target>Wenn dir MyHordes gefällt und du uns unterstützen möchtest, kannst du dies mit einer Spende an das EternalTwin Projekt tun.</target>
+        <target>Si te gusta MyHordes y quieres apoyarnos, puedes hacerlo con una donación al proyecto EternalTwin.</target>
       </segment>
     </unit>
     <unit id="uK4jynd" name="Geworbener Spieler">
@@ -3176,7 +3176,7 @@
       </notes>
       <segment>
         <source>Geworbener Spieler</source>
-        <target>Geworbener Spieler</target>
+        <target>Jugador referido</target>
       </segment>
     </unit>
     <unit id="4n2PgVx" name="Heldenerfahrung">
@@ -3187,7 +3187,7 @@
       </notes>
       <segment>
         <source>Heldenerfahrung</source>
-        <target>Heldenerfahrung</target>
+        <target>Días de héroe</target>
       </segment>
     </unit>
     <unit id="QGRs.s1" name="Du hast keine Koalition.">
@@ -3198,7 +3198,7 @@
       </notes>
       <segment>
         <source>Du hast keine Koalition.</source>
-        <target>Du hast keine Koalition.</target>
+        <target>No tienes una alianza.</target>
       </segment>
     </unit>
     <unit id="ljPPYyM" name="Du bist nicht Anführer deiner Koalition.">
@@ -3209,7 +3209,7 @@
       </notes>
       <segment>
         <source>Du bist nicht Anführer deiner Koalition.</source>
-        <target>Du bist nicht Anführer deiner Koalition.</target>
+        <target>No eres el líder de tu alianza.</target>
       </segment>
     </unit>
     <unit id="nnaWQyL" name="Kein freier Platz">
@@ -3220,7 +3220,7 @@
       </notes>
       <segment>
         <source>Kein freier Platz</source>
-        <target>Kein freier Platz</target>
+        <target>Sin espacio libre</target>
       </segment>
     </unit>
     <unit id="vOzFwXw" name="Koalitionsmitglied">
@@ -3231,7 +3231,7 @@
       </notes>
       <segment>
         <source>Koalitionsmitglied</source>
-        <target>Koalitionsmitglied</target>
+        <target>Miembro de la alianza</target>
       </segment>
     </unit>
     <unit id="2.dDOzw" name="Noch nicht bestätigt...">
@@ -3242,7 +3242,7 @@
       </notes>
       <segment>
         <source>Noch nicht bestätigt...</source>
-        <target>Noch nicht bestätigt...</target>
+        <target>Todavia no esta confirmado...</target>
       </segment>
     </unit>
     <unit id="yf4a0g_" name="Koalitionseinladung">
@@ -3253,7 +3253,7 @@
       </notes>
       <segment>
         <source>Koalitionseinladung</source>
-        <target>Koalitionseinladung</target>
+        <target>Invitación a la alianza</target>
       </segment>
     </unit>
     <unit id="IDuEdUg" name="Die Freundschaftswerbung">
@@ -3284,7 +3284,7 @@
       </notes>
       <segment>
         <source>Lass dich überraschen!</source>
-        <target>Lass dich überraschen!</target>
+        <target>¡Déjate sorprender!</target>
       </segment>
     </unit>
     <unit id="xfA2CXp">
@@ -3305,7 +3305,7 @@
       </notes>
       <segment>
         <source>Du bekommst einen frischen jugendlichen Teint und einen Babypopo.</source>
-        <target>Du bekommst einen frischen jugendlichen Teint und einen Babypopo.</target>
+        <target>Obtienes un cutis fresco y juvenil y un trasero de bebé.</target>
       </segment>
     </unit>
     <unit id="yR7_2mq" name="Du bekommst straffere Brüste.">
@@ -3316,7 +3316,7 @@
       </notes>
       <segment>
         <source>Du bekommst straffere Brüste.</source>
-        <target>Du bekommst straffere Brüste.</target>
+        <target>Obtienes senos más firmes.</target>
       </segment>
     </unit>
     <unit id="DmEId2H" name="Bekämpft wirksam deinen Körpergeruch. Deine Mitbürger werden es dir danken!">
@@ -3327,7 +3327,7 @@
       </notes>
       <segment>
         <source>Bekämpft wirksam deinen Körpergeruch. Deine Mitbürger werden es dir danken!</source>
-        <target>Bekämpft wirksam deinen Körpergeruch. Deine Mitbürger werden es dir danken!</target>
+        <target>Combate eficazmente el mal olor corporal. ¡Tus conciudadanos te lo agradecerán!</target>
       </segment>
     </unit>
     <unit id="0vm9fA_" name="Du wirst angenehm nach Orangenblüten duften.">
@@ -3338,7 +3338,7 @@
       </notes>
       <segment>
         <source>Du wirst angenehm nach Orangenblüten duften.</source>
-        <target>Du wirst angenehm nach Orangenblüten duften.</target>
+        <target>Olerá agradablemente a flor de naranjo.</target>
       </segment>
     </unit>
     <unit id="9dCZIYd" name="Du wirst ein respektierter und angesehener Bürger deiner Gemeinschaft.">
@@ -3349,7 +3349,7 @@
       </notes>
       <segment>
         <source>Du wirst ein respektierter und angesehener Bürger deiner Gemeinschaft.</source>
-        <target>Du wirst ein respektierter und angesehener Bürger deiner Gemeinschaft.</target>
+        <target>Se convertirá en un ciudadano respetado y respetado de su comunidad.</target>
       </segment>
     </unit>
     <unit id="lmPRBJ0" name="Deine natürlichen Abwehrkräfte werden gestärkt.">
@@ -3360,7 +3360,7 @@
       </notes>
       <segment>
         <source>Deine natürlichen Abwehrkräfte werden gestärkt.</source>
-        <target>Deine natürlichen Abwehrkräfte werden gestärkt.</target>
+        <target>Tus defensas naturales se fortalecen.</target>
       </segment>
     </unit>
     <unit id="sPSRoTg" name="Du bekommst stahlharte Waschbrettbauchmuskeln.">
@@ -3371,7 +3371,7 @@
       </notes>
       <segment>
         <source>Du bekommst stahlharte Waschbrettbauchmuskeln.</source>
-        <target>Du bekommst stahlharte Waschbrettbauchmuskeln.</target>
+        <target>Obtienes abdominales duros como el acero</target>
       </segment>
     </unit>
     <unit id="23cz.bn" name="Du hast eine gute Tat vollbracht.">
@@ -3382,7 +3382,7 @@
       </notes>
       <segment>
         <source>Du hast eine gute Tat vollbracht.</source>
-        <target>Du hast eine gute Tat vollbracht.</target>
+        <target>Hiciste una buena acción.</target>
       </segment>
     </unit>
     <unit id="nlq39Ht" name="Die Leute auf der Straße werden sich nach dir umdrehen.">
@@ -3393,7 +3393,7 @@
       </notes>
       <segment>
         <source>Die Leute auf der Straße werden sich nach dir umdrehen.</source>
-        <target>Die Leute auf der Straße werden sich nach dir umdrehen.</target>
+        <target>La gente en la calle se volteara para mirarte</target>
       </segment>
     </unit>
     <unit id="bRBEaOX" name="Stärkt dein Zahnfleisch und deine Zähne.">
@@ -3404,7 +3404,7 @@
       </notes>
       <segment>
         <source>Stärkt dein Zahnfleisch und deine Zähne.</source>
-        <target>Stärkt dein Zahnfleisch und deine Zähne.</target>
+        <target>Fortalece tus encías y dientes.</target>
       </segment>
     </unit>
     <unit id="ekcviFN" name="Gib dir das beruhigende Gefühl etwas Gutes getan zu haben.">
@@ -3415,7 +3415,7 @@
       </notes>
       <segment>
         <source>Gib dir das beruhigende Gefühl etwas Gutes getan zu haben.</source>
-        <target>Gib dir das beruhigende Gefühl etwas Gutes getan zu haben.</target>
+        <target>Date la reconfortante sensación de haber hecho algo bueno.</target>
       </segment>
     </unit>
     <unit id="rrVNfDl" name="Du bekommst einen frischen Atem - schnell und effektiv.">
@@ -3426,7 +3426,7 @@
       </notes>
       <segment>
         <source>Du bekommst einen frischen Atem - schnell und effektiv.</source>
-        <target>Du bekommst einen frischen Atem - schnell und effektiv.</target>
+        <target>Obtienes un aliento fresco, de forma rápida y eficaz.</target>
       </segment>
     </unit>
     <unit id="2rVePUl" name="Die Zombies werden dich lieben, dass du für Nachschub sorgst. ;)">
@@ -3437,7 +3437,7 @@
       </notes>
       <segment>
         <source>Die Zombies werden dich lieben, dass du für Nachschub sorgst. ;)</source>
-        <target>Die Zombies werden dich lieben, dass du für Nachschub sorgst. ;)</target>
+        <target>A los zombies les encantará que guardes suministros. ;)</target>
       </segment>
     </unit>
     <unit id="mkKr7.Y" name="Das andere Geschlecht wird dir nicht widerstehen können.">
@@ -3448,7 +3448,7 @@
       </notes>
       <segment>
         <source>Das andere Geschlecht wird dir nicht widerstehen können.</source>
-        <target>Das andere Geschlecht wird dir nicht widerstehen können.</target>
+        <target>El sexo opuesto no podrá resistirse.</target>
       </segment>
     </unit>
     <unit id="Sz2KR6B" name="Verleiht deinem Haar einen seidigen Glanz und stärkt deine Kopfhaut.">
@@ -3459,7 +3459,7 @@
       </notes>
       <segment>
         <source>Verleiht deinem Haar einen seidigen Glanz und stärkt deine Kopfhaut.</source>
-        <target>Verleiht deinem Haar einen seidigen Glanz und stärkt deine Kopfhaut.</target>
+        <target>Da a tu cabello un brillo sedoso y fortalece tu cuero cabelludo.</target>
       </segment>
     </unit>
     <unit id=".BIUTzQ" name="Dieser Vorteil ist von Mal zu Mal verschieden.">
@@ -3470,7 +3470,7 @@
       </notes>
       <segment>
         <source>Dieser Vorteil ist von Mal zu Mal verschieden.</source>
-        <target>Dieser Vorteil ist von Mal zu Mal verschieden.</target>
+        <target>Este beneficio varía de vez en cuando.</target>
       </segment>
     </unit>
     <unit id="BkMtMYQ">
@@ -3625,7 +3625,7 @@
       </notes>
       <segment>
         <source>Schwarzes Brett</source>
-        <target>Schwarzes Brett</target>
+        <target>Tablón de anuncios</target>
       </segment>
     </unit>
     <unit id="Q2jvlBg" name="Du kannst das Schwarze Brett nicht verwenden.">
@@ -3636,7 +3636,7 @@
       </notes>
       <segment>
         <source>Du kannst das Schwarze Brett nicht verwenden.</source>
-        <target>Du kannst das Schwarze Brett nicht verwenden.</target>
+        <target>No puede utilizar el tablón de anuncios.</target>
       </segment>
     </unit>
     <unit id="TTWCiLb" name="Neue Übersetzungen verwenden">
@@ -3647,7 +3647,7 @@
       </notes>
       <segment>
         <source>Neue Übersetzungen verwenden</source>
-        <target>Neue Übersetzungen verwenden</target>
+        <target>Utilizar nuevas traducciones</target>
       </segment>
     </unit>
     <unit id="oHq1QSk">
@@ -3658,7 +3658,7 @@
       </notes>
       <segment>
         <source>Mit dem neuen Übersetzungssystem werden Texte akkurater in deiner Sprache dargestellt (zum Beispiel die passende Verwendung von Singular und Plural-Formen). Deaktiviere diese Option, um die originalen Texte aus Die Verdammten zu sehen.</source>
-        <target>Mit dem neuen Übersetzungssystem werden Texte akkurater in deiner Sprache dargestellt (zum Beispiel die passende Verwendung von Singular und Plural-Formen). Deaktiviere diese Option, um die originalen Texte aus Die Verdammten zu sehen.</target>
+        <target>Con el nuevo sistema de traducción, los textos se representan con mayor precisión en su idioma (por ejemplo, el uso apropiado de formas singulares y plurales). Desmarca esta opción para ver la traduccion original.</target>
       </segment>
     </unit>
     <unit id="N0JgSpD" name="Dein Spielername">
@@ -3669,7 +3669,7 @@
       </notes>
       <segment>
         <source>Dein Spielername</source>
-        <target>Dein Spielername</target>
+        <target>Su nombre de usuario</target>
       </segment>
     </unit>
     <unit id="eUo8GNZ">
@@ -3690,7 +3690,7 @@
       </notes>
       <segment>
         <source>Du kannst deinen Spielernamen aktuell nicht ändern.</source>
-        <target>Du kannst deinen Spielernamen aktuell nicht ändern.</target>
+        <target>Actualmente no puedes cambiar tu nombre de jugador.</target>
       </segment>
     </unit>
     <unit id="6d9Ha3Q" name="Ändern des Spielernamens">
@@ -3701,7 +3701,7 @@
       </notes>
       <segment>
         <source>Ändern des Spielernamens</source>
-        <target>Ändern des Spielernamens</target>
+        <target>Cambiar el nombre del jugador</target>
       </segment>
     </unit>
     <unit id="LIMbDjH" name="Du kannst deinen Spielernamen nicht mehr ändern.">
@@ -3712,7 +3712,7 @@
       </notes>
       <segment>
         <source>Du kannst deinen Spielernamen nicht mehr ändern.</source>
-        <target>Du kannst deinen Spielernamen nicht mehr ändern.</target>
+        <target>Ya no puedes cambiar tu nombre de jugador.</target>
       </segment>
     </unit>
     <unit id="yF2vVL5" name="%user% war in der Vergangenheit unter folgenden Namen bekannt:">
@@ -3723,7 +3723,7 @@
       </notes>
       <segment>
         <source>%user% war in der Vergangenheit unter folgenden Namen bekannt:</source>
-        <target>%user% war in der Vergangenheit unter folgenden Namen bekannt:</target>
+        <target>%user% era conocido con los siguientes nombres en el pasado:</target>
       </segment>
     </unit>
     <unit id="tT1wWcP" name="Du hattest in der Vergangenheit folgende Spielernamen:">
@@ -3734,7 +3734,7 @@
       </notes>
       <segment>
         <source>Du hattest in der Vergangenheit folgende Spielernamen:</source>
-        <target>Du hattest in der Vergangenheit folgende Spielernamen:</target>
+        <target>Tenías los siguientes nombres de jugador en el pasado:</target>
       </segment>
     </unit>
     <unit id="nA9SyfS" name="Dafür ist es zu früh!">
@@ -3745,7 +3745,7 @@
       </notes>
       <segment>
         <source>Dafür ist es zu früh!</source>
-        <target>Dafür ist es zu früh!</target>
+        <target>¡Es demasiado pronto para eso!</target>
       </segment>
     </unit>
     <unit id="7aH8vQI" name="Bitte ändere deinen Anzeigenamen auf EternalTwin.">
@@ -3756,7 +3756,7 @@
       </notes>
       <segment>
         <source>Bitte ändere deinen Anzeigenamen auf EternalTwin.</source>
-        <target>Bitte ändere deinen Anzeigenamen auf EternalTwin.</target>
+        <target>Cambie su nombre para mostrar a EternalTwin.</target>
       </segment>
     </unit>
     <unit id="4DFz5Xa">
@@ -3767,7 +3767,7 @@
       </notes>
       <segment>
         <source>Du kannst deinen Spielernamen nicht ändern, weil du einen zugehörigen Eternal Twin Account hast. Du musst zu deinem Eternal Twin-Konto gehen, um deinen Spielernamen zu ändern.</source>
-        <target>Du kannst deinen Spielernamen nicht ändern, weil du einen zugehörigen Eternal Twin Account hast. Du musst zu deinem Eternal Twin-Konto gehen, um deinen Spielernamen zu ändern.</target>
+        <target>No puedes cambiar tu nombre de jugador porque tienes una cuenta asociada de Eternal Twin. Deberá ir a su cuenta de Eternal Twin para cambiar su nombre de jugador.</target>
       </segment>
     </unit>
     <unit id=".NQ7ahe">
